--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
